--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "illuminate/mail": "*",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "spatie/laravel-permission": "^6.14"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
